fix: text align center in shop-by-brand section

--- a/css/elements.css
+++ b/css/elements.css
@@ -4,9 +4,11 @@
 .text-dark {
     color: #4b566b;
 }
+.text-align-center {
+    text-align: center;
+}
 .h3 {
     display: block;
-    text-align: center;
     font-weight: 300;
     font-size: calc(1.325rem + 0.9vw);
     line-height: 1.2;
@@ -16,7 +18,6 @@
 }
 .h2 {
     display: block;
-    text-align: center;
     font-weight: 500;
     font-size: calc(1.425rem + 2.1vw);
     line-height: 1;
@@ -24,7 +25,6 @@
     margin-bottom: .75rem;
 }
 .p {
-    text-align: center;
     font-size: 1.125rem;
     padding-bottom: 1rem;
     margin-top: 0;
@@ -71,15 +71,12 @@
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
     .h3 {
-        text-align: start;
         font-size: 2rem;
     }
     .h2 {
-        text-align: start;
         font-size: 3rem;
     }
     .p {
-        text-align: start;
         font-size: 1.125rem;
     }
 }
